@@ -195,12 +195,12 @@ Starts with first value.
 ..test of: example_kind
 
 
-</pre><! --  end pre --><a name='test'>
+</pre><a name='test'>
    <h2> Generated Test Class</h2></a>
   <pre>
 # Tests generated by: guppy.gsl.Tester
 # Main source file: /home/sverker/guppy/specs/docexample.gsl
-# Date: Wed May 14 11:31:36 2008
+# Date: Tue May 20 14:42:29 2008
 class Tester:
     tests = {}
     def test_example_kind(self, arg):
@@ -264,6 +264,5 @@ class Tester:
         t51 = arg.m_alt(ex_0)
         t52 = arg.m_alt(ex_1)
     tests['.tgt.docexample.example_kind'] = test_example_kind
-</pre><! --  end pre
-     -->
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed May 14 11:31:36 2008</div></body></html>
+</pre>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue May 20 14:42:29 2008</div></body></html>
