@@ -500,4 +500,4 @@ unspecified whether this returned copy is mutable or immutable.
  a hash value based on the addresses of the elements.
 
 </dt></dl></dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed May 14 11:31:35 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue May 20 14:42:27 2008</div></body></html>
