@@ -1,3 +1,8 @@
+from distutils.command.install import INSTALL_SCHEMES
+
+for scheme in INSTALL_SCHEMES.values():
+    scheme['data'] = scheme['purelib'] 
+
 from distutils.core import setup, Extension
 
 setsc = Extension("guppy.sets.setsc",
@@ -17,9 +22,9 @@ heapyc = Extension("guppy.heapy.heapyc",
 
 def doit():
     setup(name="guppy",
-      version="0.1.9",
-      description="Guppy-PE -- A Python Programming Environment",
-      long_description="""\
+          version="0.1.9",
+          description="Guppy-PE -- A Python Programming Environment",
+          long_description="""\
 Guppy-PE is a library and programming environment for Python,
 currently providing in particular the Heapy subsystem, which supports
 object and heap memory sizing, profiling and debugging. It also
@@ -30,29 +35,40 @@ common source.
 
 The guppy top-level package contains the following subpackages:
 
-etc     Support modules. Contains especially the Glue protocol module.
+etc
+       Support modules. Contains especially the Glue protocol module.
 
-gsl     The Guppy Specification Language implementation. This can
-        be used to create documents and tests from a common source.
+gsl
+       The Guppy Specification Language implementation. This can
+       be used to create documents and tests from a common source.
 
-heapy   The heap analysis toolset. It can be used to find information
-        about the objects in the heap and display the information
-        in various ways.
+heapy
+       The heap analysis toolset. It can be used to find information
+       about the objects in the heap and display the information
+       in various ways.
 
-sets    Bitsets and 'nodesets' implemented in C.
+help 
+       Interactive text-based help, with data files in HTML format.
+
+sets 
+       Bitsets and 'nodesets' implemented in C.
 """,
-      author="Sverker Nilsson",
-      author_email="sn@sncs.se",
-      url="http://guppy-pe.sourceforge.net",
-      license='MIT',
-      packages=[
-      "guppy",
-      "guppy.etc",
-      "guppy.gsl",
-      "guppy.heapy",
-      "guppy.heapy.test",
-      "guppy.sets",
-      ],
-      ext_modules=[setsc, heapyc])
+          author="Sverker Nilsson",
+          author_email="sn@sncs.se",
+          url="http://guppy-pe.sourceforge.net",
+          license='MIT',
+          packages=[
+            "guppy",
+            "guppy.etc",
+            "guppy.gsl",
+            "guppy.heapy",
+            "guppy.heapy.test",
+            "guppy.sets",
+            "guppy.help"
+            ],
+          package_data={"guppy" : ["help/*.html"]},
+          ext_modules=[setsc, heapyc]
+          )
+
 doit()
 
